--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
       <optional>true</optional>
     </dependency>
 
-   
+   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-mail</artifactId>
+	</dependency>
+	   
 
 		
 	</dependencies>
